# particles-rs

./: Cargo.toml  README.md
src/: config.rs  lib.rs
www/: bootstrap.js  index.html  index.js  package.json  webpack.config.js
www/css/: style.css
www/js/: config.js  gui.js  lib.js  stats.js
www/particles-rs/: particles_rs.js  particles_rs_bg.js  particles_rs_bg.wasm  particles_rs_bg.wasm.d.ts
www/pkg/: package.json  particles_rs.d.ts  particles_rs_bg.js  particles_rs_bg.wasm  particles_rs_bg.wasm.d.ts
